engine/test/electron/scripts/lexer/errors/invalid_char_hash.e
// ERROR TEST: Hash outside of specific context (if not valid)
#define
